2012-04-23  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/fgraph.php: Fixed codification issue
	in the flash graphs legends 3520641

2012-04-23 Miguel de Dios <miguel.dedios@artica.es>
	
	* ChangeLog: fixed lost action in the previous lines.

2012-04-23 Miguel de Dios <miguel.dedios@artica.es>
	
	* index.php: fixed notice message php.
	
	* extensions/update_manager/lib/libupdate_manager.php: fixed into
	the function "um_db_load_settings" the cache of DB, and set to
	translate some untranslate text.
	
	* include/config_process.php: added for a long time the setting the
	$develop_bypass as global.
	
	* extensions/update_manager/settings.php, operation/menu.php,
	operation/search_agents.php: cleaned source code style.
	
	* include/functions_config.php: fixed php noticie message of the
	var "$config['update_manager_installed']" in the first execution
	after intallation.

2012-04-23  Sergio Martin <sergio.martin@artica.es>

	* include/functions_networkmap.php
	include/ajax/networkmap.ajax.php
	operation/agentes/networkmap.topology.php: Fixed several
	errors in the apache log when generate networkmap and add
	to the root node a little map summary

2012-04-23 Dario Rodriguez <dario.rodriguez@artica.es>

	* godmode/reporting/visual_console_builder.data.php: Fixed a problem
	with some links and new menu structure.

2012-04-23 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_users.php, operation/users/webchat.php,
	general/header.php: added list users in chat.

2012-04-23 Dario Rodriguez <dario.rodriguez@artica.es>

	* godmode/reporting/visual_console_builder.wizard.php: Unsorted
	combo in visual console wizard to switch the default type of item
	to static graph to preserve the previous default behaviour.

2012-04-23  Vanessa Gil  <vanessa.gil@artica.es>

	* operation/menu.php
	  operation/agentes/exportdata.php: Fixed bug: Error exporting
	data to excel or csv.

	* operation/agentes/exportdata.csv.php